--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pavan-codeadvent2020",
   "version": "1.0.0",
   "dependencies": {
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.20"
   }
 }
